second spacing fix

--- a/Styles.css
+++ b/Styles.css
@@ -39,7 +39,7 @@ h2 {
     margin-left: auto;
     margin-right: auto;
     background-color: aqua;
-    margin-top: 2%;
+    margin-top: 4%;
     text-align: center;
     width: 80%;
     padding-top: 0.5%;
